--- a/index.html
+++ b/index.html
@@ -251,18 +251,33 @@
 
         <div id="three" class="section">
             Experience
-            <a href="#two"></a>
+            <a href="#three"></a>
             <div class="background bg3"></div> 
         </div>
 
         <div id="four" class="section">
             Contact
-            <a href="#three"></a>
+            <a href="#four"></a>
             <div class="background bg4"></div> 
 
         </div>
     </div>     
     
-       
+       <!-- The JavaScript -->
+       <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1/jquery.min.js"></script>		
+       <script type="text/javascript" src="jquery.easing.1.3.js"></script>
+       <script type="text/javascript">
+       $(document).ready(function() {
+           $('.nav-menu-li a').click(function(e){
+                e.preventDefault();
+                var target = $($(this).attr('href')); //gets anchor link
+                var scrollTo = target.offset().left;
+                $('div.content').animate({
+                    scrollLeft: scrollTo+'px'
+                }, 1000);
+            });
+        }); //end of jquery
+
+       </script>
 </body>
 </html>
