--- a/index.html
+++ b/index.html
@@ -1,65 +1,34 @@
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" >
 
 <head>
-    <title>aaron gross</title>
-    <style type="text/css">
-        * {
-            box-sizing: border-box;
-        }
+  <meta charset="UTF-8">
+  <title>Pure CSS Hamburger fold-out menu</title>
+      <link rel="stylesheet" href="css/style.css">
 
-        html, body {
-            width: 100%;
-            height: 100%;
-            margin: 0;
-            padding: 0;
-            color: white;
-        }
-
-        body {
-            display: flex;
-            flex-direction: column;
-        }
-
-        li {
-            list-style: none;
-            margin: 0;
-            padding: 0;
-        }
-
-        a {
-            text-decoration: none;
-            color: white;
-            margin: 0;
-            padding: 0;
-        }
-
-        a:hover {
-            color: purple;
-        }
-
-        .nav {
-            background-color: purple;
-            width: 100vw;
-            height: 100px;
-        }
-
-        .content {
-            background: blue;
-            width: 100vw;
-            height: 100vh;
-        }
-    </style>
 </head>
 
 <body>
-   <header class="nav"></header>
-   <div class="content">
 
-    <div class="portfolio_container"></div>
-   </div>
+<nav role="navigation" class="lower-right">
+  <div id="menuToggle">
 
-    <script type="text/javascript">
-    </script>
+    <input type="checkbox" />
+
+    <span></span>
+    <span></span>
+    <span></span>
+    
+    <ul id="menu">
+      <a href="#"><li>about</li></a>
+      <a href="#"><li>portfolio</li></a>
+      <a href="#"><li>resume</li></a>
+      <a href="#"><li>contact</li></a>
+    </ul>
+  </div>
+</nav>
+
+    <script  src="js/index.js"></script>
 </body>
 
 </html>
