layout and smooth scrolling

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Pure CSS Hamburger fold-out menu</title>
+  <title>aaron gross - full stack developer</title>
       <link rel="stylesheet" href="css/style.css">
 
 </head>
@@ -12,21 +12,37 @@
 
 <nav role="navigation" class="lower-right">
   <div id="menuToggle">
-
     <input type="checkbox" />
-
     <span></span>
     <span></span>
     <span></span>
-    
     <ul id="menu">
-      <a href="#"><li>about</li></a>
-      <a href="#"><li>portfolio</li></a>
-      <a href="#"><li>resume</li></a>
-      <a href="#"><li>contact</li></a>
+      <a href="#about"><li >about</li></a>
+      <a href="#portfolio"><li>portfolio</li></a>
+      <a href="#resume"><li>resume</li></a>
+      <a href="#contact"><li>contact</li></a>
     </ul>
   </div>
 </nav>
+
+<div id="about" class="section1">
+  <div class="name-title">
+    <div class="about-name">aaron gross</div>
+    <div class="about-title">full stack developer</div>
+  </div>
+</div>
+
+<div id="portfolio" class="section2">
+  <div class="portfolio-title">portfolio</div>
+</div>
+
+
+
+
+
+<div id="resume" class="section3"></div>
+<div id="contact" class="section4"></div>
+
 
     <script  src="js/index.js"></script>
 </body>
