--- a/index.html
+++ b/index.html
@@ -26,21 +26,32 @@
 </nav>
 
 <div id="about" class="section1">
-  <div class="name-title">
-    <div class="about-name">aaron gross</div>
-    <div class="about-title">full stack developer</div>
+  <div class="picture-container">
+    <div class="picture"></div>
+  </div>
+  <div class="name-title-section">
+    <div class="name-title-container">
+      <div class="about-name">aaron gross</div>
+      <div class="about-title">full stack developer</div>
+  </div>
+  </div>
+</div>
+<div id="about" class="section2"></div>
+
+<div id="portfolio" class="section3">
+  <div class="portfolio-container">
+    <div class="portfolio-item">
+      <div class="portfolio-item-left-container">
+      <h1>WalkMe</h1> My first web application! WalkMe allows 
+      users to 
+      </div>
+      <div class="portfolio-item-right-container">
+        Video/Image
+      </div>
+    </div>
   </div>
 </div>
 
-<div id="portfolio" class="section2">
-  <div class="portfolio-title">portfolio</div>
-</div>
-
-
-
-
-
-<div id="resume" class="section3"></div>
 <div id="contact" class="section4"></div>
 
 
