starting to come together

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <title>aaron gross - full stack developer</title>
       <link rel="stylesheet" href="css/style.css">
+      <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
 
 </head>
 
@@ -42,11 +43,20 @@
   <div class="portfolio-container">
     <div class="portfolio-item">
       <div class="portfolio-item-left-container">
-      <h1>WalkMe</h1> My first web application! WalkMe allows 
-      users to 
+     
       </div>
       <div class="portfolio-item-right-container">
-        Video/Image
+        <h1>WalkMe</h1><p class="description">My first web application! WalkMe allows 
+        users to browse, create and rate walking tours around the world.</p><br>
+        <ul class="portfolio-item-webstack">
+          <li class="item-webstack">HTML</li>
+          <li class="item-webstack">CSS</li>
+          <li class="item-webstack">Javascript</li>
+          <li class="item-webstack">Node.js</li>
+          <li class="item-webstack">Firebase</li>
+          <li class="item-webstack">Google Maps API</li>
+        </ul>
+        <a href="" class="github-button">GitHub</a>
       </div>
     </div>
   </div>
