checking font on mobile

--- a/index.html
+++ b/index.html
@@ -56,7 +56,12 @@
           <li class="item-webstack">Firebase</li>
           <li class="item-webstack">Google Maps API</li>
         </ul>
-        <a href="" class="github-button">GitHub</a>
+        <div>
+          <ul class="github-wrapper">
+            <li>icon</li>
+            <li>GitHub</li>
+          </ul>
+        </div>
       </div>
     </div>
   </div>
