portfolio getting there

--- a/index.html
+++ b/index.html
@@ -42,9 +42,7 @@
 <div id="portfolio" class="section3">
   <div class="portfolio-container">
     <div class="portfolio-item">
-      <div class="portfolio-item-left-container">
-     
-      </div>
+      <div class="portfolio-item-left-container"></div>
       <div class="portfolio-item-right-container">
         <h1>WalkMe</h1><p class="description">My first web application! WalkMe allows 
         users to browse, create and rate walking tours around the world.</p><br>
@@ -58,12 +56,36 @@
         </ul>
         <div>
           <ul class="github-wrapper">
-            <li>icon</li>
-            <li>GitHub</li>
+            <li class="git-icon"></li>
+            <li class="git-text">GitHub</li>
           </ul>
         </div>
       </div>
     </div>
+
+    <div class="portfolio-item">
+      <div class="portfolio-item-left-container"></div>
+      <div class="portfolio-item-right-container">
+        <h1>Town Square</h1><p class="description">A video-only online forum. Users can start threads, 
+          reply to threads and record video straight from the app!</p><br>
+        <ul class="portfolio-item-webstack">
+          <li class="item-webstack">HTML</li>
+          <li class="item-webstack">CSS</li>
+          <li class="item-webstack">Javascript</li>
+          <li class="item-webstack">Node.js</li>
+          <li class="item-webstack">Postgres</li>
+          <li class="item-webstack">WebRTC API</li>
+          <li class="item-webstack">Amazon AWS/EC2</li>
+        </ul>
+        <div>
+          <ul class="github-wrapper">
+            <li class="git-icon"></li>
+            <li class="git-text">GitHub</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    
   </div>
 </div>
 
