--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>aaron gross - full stack developer</title>
       <link rel="stylesheet" href="css/style.css">
       <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
-
+      <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
 </head>
 
 <body>
@@ -27,7 +27,7 @@
 </nav>
 
 <div id="about" class="section1">
-  <div class="picture-container">
+  <div class="picture-container animated zoomIn">
     <div class="picture"></div>
   </div>
   <div class="name-title-section">
