added techstack icons

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
       <link rel="stylesheet" href="css/style.css">
       <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
+      <link rel="stylesheet" href="https://cdn.rawgit.com/konpa/devicon/df6431e323547add1b4cf45992913f15286456d3/devicon.min.css">
+
 </head>
 
 <body>
@@ -20,13 +22,12 @@
     <ul id="menu">
       <a href="#about"><li >about</li></a>
       <a href="#portfolio"><li>portfolio</li></a>
-      <a href="#resume"><li>resume</li></a>
       <a href="#contact"><li>contact</li></a>
     </ul>
   </div>
 </nav>
 
-<div id="about" class="section1">
+<div class="section1">
   <div class="picture-container animated zoomIn">
     <div class="picture"></div>
   </div>
@@ -37,9 +38,33 @@
   </div>
   </div>
 </div>
-<div id="about" class="section2"></div>
+<div id="about" class="section2">
+  <div class="techstack-container">
+    <div class="techstack-text"></div>
+    <div class="techstack-icons">
+      <i class="devicon-postgresql-plain-wordmark colored icon-size"></i>
+      <i class="devicon-javascript-plain colored icon-size"></i>
+      <i class="devicon-html5-plain-wordmark colored icon-size"></i>
+      <i class="devicon-css3-plain-wordmark colored icon-size"></i>
+      <i class="devicon-nodejs-plain-wordmark colored icon-size"></i>
+      <i class="devicon-python-plain-wordmark colored icon-size"></i>
+      <i class="devicon-amazonwebservices-plain-wordmark colored icon-size"></i>
+      <i class="devicon-github-plain-wordmark icon-size"></i>
 
-<div id="portfolio" class="section3">
+
+
+
+
+
+
+
+    </div>
+  </div>
+
+</div>
+
+<a class="anchor" id="portfolio"></a>
+<div  class="section3">
   <div class="portfolio-container">
     <div class="portfolio-item">
       <div class="portfolio-item-left-container"></div>
@@ -74,8 +99,8 @@
           <li class="item-webstack">Javascript</li>
           <li class="item-webstack">Node.js</li>
           <li class="item-webstack">Postgres</li>
-          <li class="item-webstack">WebRTC API</li>
-          <li class="item-webstack">Amazon AWS/EC2</li>
+          <li class="item-webstack">WebRTC</li>
+          <li class="item-webstack">AWS/EC2</li>
         </ul>
         <div>
           <ul class="github-wrapper">
