added google maps to contact

--- a/index3.html
+++ b/index3.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width">
   <title>aaron gross - full stack developer</title>
       <link rel="stylesheet" href="css/style3.css">
       <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
@@ -59,11 +60,14 @@
 
     <section id="contact">
         <h3 class="section-title">contact</h3>
-        <div>asdasd</div>
+        <div>
+                <div id="googleMap"></div>
+
+        </div>
     </section>
 
 </main>
-
+<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBXNZhn8r9wSEd0feh6tXOn3-ElcPv-nu4"></script>
     <script  src="js/index3.js"></script>
 </body>
 
