changed some stuff

--- a/index3.html
+++ b/index3.html
@@ -62,7 +62,7 @@
         <h3 class="section-title">contact</h3>
         <div>
                 <div id="googleMap"></div>
-
+                <div class='maps-overlay'></div>
         </div>
     </section>
 
