adjusting title font

--- a/index3.html
+++ b/index3.html
@@ -14,13 +14,10 @@
 
 <nav>
     <ul class="nav-container">
-        <li class="align-center">about me</li>
-        <!-- <li class="align-center">|</li> -->
-        <li class="align-center">portfolio</li>
-        <!-- <li class="align-center">|</li> -->
-        <li class="align-center">contact</li>
-        <!-- <li class="align-center">|</li> -->
-        <li class="align-center">resume</li>
+        <li class="align-center"><a href="#aboutme">about me</a></li>
+        <li class="align-center"><a href="#projects">portfolio</a></li>
+        <li class="align-center"><a href="#contact">contact</a></li>
+        <li class="align-center"><a href="">resume</a></li>
 
     </ul>
 </nav>
@@ -30,7 +27,7 @@
     <section id="hero" class="full-height pictureofme">
         <div class="overlay"></div>
         <ul class="name-title-container aboveoverlay">
-                <li class="name">aaron gross</li>
+                <li class="name" >aaron gross</li>
                 <li class="title">full-stack web developer</li>
             </ul>
     </section>
@@ -39,7 +36,7 @@
     <section id="aboutme">
         <h3 class="section-title">about me</h3>
         <div class="container-aboutme">
-                <p class="aboutme-text">I’ve always sought out opportunities and challenges that are 
+                <p class="aboutme-text"> I've always sought out opportunities and challenges that are 
                     meaningful to me. Although my professional path has taken many 
                     twists and turns — from creating online seminars for bariatric 
                     patients, to building Georgia Tech’s Online Masters of Computer 
@@ -55,7 +52,7 @@
 
     <section id="projects">
         <h3 class="section-title">projects</h3>
-        <div>asdasd</div>
+        <div>WalkMe</div>
     </section>
 
     <section id="contact">
@@ -68,7 +65,7 @@
 
 </main>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBXNZhn8r9wSEd0feh6tXOn3-ElcPv-nu4"></script>
-    <script  src="js/index3.js"></script>
+<script  src="js/index3.js"></script>
 </body>
 
 </html>
