--- a/index3.html
+++ b/index3.html
@@ -8,6 +8,7 @@
       <link rel="stylesheet" href="css/style3.css">
       <link href="https://fonts.googleapis.com/css?family=Josefin+Sans" rel="stylesheet">
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/animate.css@3.5.2/animate.min.css">
+      <script defer src="https://use.fontawesome.com/releases/v5.0.10/js/all.js" integrity="sha384-slN8GvtUJGnv6ca26v8EzVaR9DC58QEwsIk9q1QXdCU8Yu8ck/tL/5szYlBbqmS+" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -98,17 +99,16 @@
                 <div id="googleMap"></div>
                 <div class='maps-overlay'></div>
                 <div class='contact-info-container'>
-                    <li>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M0 3v18h24v-18h-24zm6.623 7.929l-4.623 5.712v-9.458l4.623 3.746zm-4.141-5.929h19.035l-9.517 7.713-9.518-7.713zm5.694 7.188l3.824 3.099 3.83-3.104 5.612 6.817h-18.779l5.513-6.812zm9.208-1.264l4.616-3.741v9.348l-4.616-5.607z"/></svg>
-                            aaronhgross@gmail.com</li>
-                    <li>git github.com/ponchieponcho</li>
-                    <li>linkedIn linkedin.com/in/aaronhgross</li>
+                    <li ><i class="fas fa-envelope fa-3x" ></i></li>
+                    <li><i class="fab fa-github-alt fa-3x" ></i></li>
+                    <li><i class="fab fa-linkedin-in fa-3x" ></i></li>
                 </div>
         </div>
     </section>
 
 </main>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBXNZhn8r9wSEd0feh6tXOn3-ElcPv-nu4"></script>
+
 <script  src="js/index3.js"></script>
 </body>
 
